update exercises for probability

--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -494,22 +494,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 186,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1351"
+       "0.1392"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "click_rate = np.random.choice([1,0], size = (10_000,4326), p=[.02, (1-.02)])\n",
     "clicks = click_rate.sum(axis=1)\n",
     "(clicks >= 97).mean()"
@@ -533,16 +534,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999999999999999"
+       "0.4528433576092388"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +551,7 @@
    "source": [
     "# 100 questions\n",
     "# answers could be 0.00-1.00, by 0.01\n",
-    "stats.binom(100, .01).cdf(60)"
+    "stats.binom(60, .01).sf(0)"
    ]
   },
   {
@@ -562,23 +563,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.00947"
+       "0.4466"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "guess = np.random.choice([1,0], size = 100_000, p=[.01, .99])\n",
-    "guess.mean()"
+    "guess = np.random.choice([1,0], size = (10_000, 60), p=[.01, .99]).round(2)\n",
+    "guess.any(axis=1).mean()"
    ]
   },
   {
@@ -597,49 +598,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 196,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8342199288437355"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# stats.binom(trials, probability).method(outcome)\n",
+    "p = .03\n",
+    "n = round(.9*3*22)\n",
     "\n",
-    "\n",
-    "stats.binom(visits, .03).\n",
-    "stats.binom(students, .9)."
+    "# cleaned each day\n",
+    "stats.binom(n,p).sf(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.83711"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# cleaned each day\n"
+    "(np.random.choice([1,0], p=[.03,.97], size=(100_000,n)).sum(axis=1) > 0).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02748303199257618"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# two days without cleaning\n"
+    "# two days without cleaning\n",
+    "1 - stats.binom(n*2, p).sf(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02758"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# all week without cleaning"
+    "(np.random.choice([1,0], p=[.03,.97], size=(100_000,n*2)).sum(axis=1) == 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00012521651388086585"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# all week without cleaning\n",
+    "1 - stats.binom(n*5, p).sf(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0001"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(np.random.choice([1,0], p=[.03,.97], size=(100_000,n*5)).sum(axis=1) == 0).mean()"
    ]
   },
   {
@@ -658,16 +739,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9479187205847804"
+       "0.7976716190363569"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +760,15 @@
     "person = 2 # minutes\n",
     "wait = 10 # minutes\n",
     "\n",
-    "stats.norm(avg*person+wait,sd*person+wait).sf(14)"
+    "mean = avg * person\n",
+    "stdv = sd * person\n",
+    "\n",
+    "lunch = 60\n",
+    "eat = 15\n",
+    "\n",
+    "wait_time_cap = lunch - (wait + eat)\n",
+    "\n",
+    "stats.norm(mean, stdv).cdf(wait_time_cap)"
    ]
   },
   {
@@ -694,7 +783,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(np.random.normal)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -786,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +886,7 @@
        "24.39"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +907,7 @@
        "9.21"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,25 +919,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.05"
+       "34.0"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# c. What percent of employees earn between 65,000 and 80,000?\n",
-    "high = stats.norm(emp_sal.avg_s,emp_sal.sd).cdf(80_000)\n",
-    "low = stats.norm(emp_sal.avg_s,emp_sal.sd).sf(65_000)\n",
-    "round(float((high - low)*100),2)"
+    "round(float(np.diff(stats.norm(emp_sal.avg_s,emp_sal.sd).cdf([65_000,80_000]))),2)* 100"
    ]
   },
   {
